# mediumRare

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
CMake/: CommonMacros.txt
mediumRare/: CMakeLists.txt
mediumRare/include/: App.hpp  ImGuiComponents.hpp  Mesh.hpp  Pipeline.hpp  RendererOptions.hpp  types.hpp
mediumRare/shaders/: Bloom.comp  BrightPass.comp  SSAO.comp  ToneMap.frag  combine.frag  common.sp  grid.frag  grid.vert  gridParams.h  main.comp  main.frag  main.geom  main.tesc  main.tese  main.vert  pbrUnlit.frag  pbrUnlit.vert  posOnly.vert  quad.vert  shadow.frag  shadow.vert  skybox.frag  skybox.vert  test.frag  test.geom
mediumRare/src/: App.cpp  ImGuiComponents.cpp  mediumRare.cpp
shared/Scene/: SceneUtils.h
